Add all text and questions for educational fields

--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -21,3 +21,51 @@
 <p>
   What is the name of the group/organisation to which the survey participants belong?
 </p>
+
+<p>
+  What is the level of study of your survey group or class?
+</p>
+
+<p>
+  Which of the following best describes the disciplinary specialism of this specific group or class?
+</p>
+
+<p>
+  What is the name of the module/course within which you are using this tool? Please provide as much detail as possible.
+</p>
+
+<p>
+  To help us understand your course, please provide the URL for your course website if there is one:
+</p>
+
+<p>
+  How many people are there in the group/class who will be receiving the survey?
+</p>
+
+<p>
+  Are you planning a session with your respondents to discuss the results?
+</p>
+
+<p>
+  If yes, what is the date of your session?
+</p>
+
+<p>
+  Do you want respondents to your survey to be anonymous? If no, respondents' names will be visible in outputs intended to be shared with the group. Respondents will be made aware of this and reminded of their right to refuse to participate. You should think carefully about whether anonymity is appropriate, and may wish to consult your group in advance on their preferences around this.
+</p>
+
+<p>
+  If you wish to, you can view results broken into subgroups. To do so, please add subgroup names below so that they can be added to the survey. Respondents will be able to choose only one, so they should be mutually exclusive.
+</p>
+
+<p>
+  What subgroup are you in?
+</p>
+
+<p>
+  Please enter subgroup answer options here:
+</p>
+
+<p>
+  What do you hope to achieve from using GO-FOX with this class?
+</p>
