Add all text and questions for organisational fields

--- a/app/views/surveys/_organisational_fields.html.erb
+++ b/app/views/surveys/_organisational_fields.html.erb
@@ -5,3 +5,99 @@
 <p>
   What would you like to call your survey?
 </p>
+
+<p>
+  If this is a follow up to a previous GO-FOX survey, please enter the original survey ID:
+</p>
+
+<p>
+  What is the language of your survey?
+</p>
+
+<p>
+  Please upload a logo for your survey:
+</p>
+
+<p>
+  What is the name of the group/organisation to which the survey participants belong?
+</p>
+
+<p>
+  Which of the following best describes the group/organisation to which the survey participants belong?
+</p>
+
+<p>
+  Where is the group/organisation to which the survey participants belong located?
+</p>
+
+<p>
+  Is the group/organisation to which survey participants belong part of a wider network or structure?
+</p>
+
+<p>
+  Please give details:
+</p>
+
+<p>
+  To help us understand the group/organisation to which survey participants belong, please provide the URL for their website if there is one:
+</p>
+
+<p>
+  TO BE UPDATED: What kind of conservation activities is the group/organisation to which survey participants belong involved in? Tick all that apply:
+</p>
+
+<p>
+  When was the group/organisation to which participants belong first established?
+</p>
+
+<p>
+  For the group/organisation to which survey participants belong, please tick all the following sources of funding that apply:
+</p>
+
+<p>
+  Which of the following best describes the geographical scope of the group/organisation to which survey participants belong?
+</p>
+
+<p>
+  How many people are there in the group/organisation in total?
+</p>
+
+<p>
+  How many people are there in the group/organisation who will be receiving the survey?
+</p>
+
+<p>
+  If the survey is being targeted at a subgroup of the organisation, can you please describe the group?
+</p>
+
+<p>
+  If the survey is being targeted at a subgroup of the organisation, can you please explain why this group has been selected to participate?
+</p>
+
+<p>
+  Are you planning a session with your respondents to discuss the results?
+</p>
+
+<p>
+  If yes, what is the date of your session?
+</p>
+
+<p>
+  Do you want respondents to your survey to be anonymous? If no, respondents' names will be visible in outputs intended to be shared with the group. Respondents will be made aware of this and reminded of their right to refuse to participate. You should think carefully about whether anonymity is appropriate, and may wish to consult your group in advance on their preferences around this.
+</p>
+
+<p>
+  If you wish to, you can view results broken into subgroups. To do so, please add subgroup names below so that they can be added to the survey. Respondents will be able to choose only one, so they should be mutually exclusive.
+</p>
+
+<p>
+  What subgroup are you in?
+</p>
+
+<p>
+  Please enter subgroup answer options here
+</p>
+
+<p>
+  What do you hope to achieve from using Go Fox with this group/organisation?
+</p>
