Further progress on the forms for educational and organisational user types

--- a/app/views/surveys/_organisational_fields.html.erb
+++ b/app/views/surveys/_organisational_fields.html.erb
@@ -1,103 +1,181 @@
-<p>
-  In this section we ask questions about the specific group to which you will be sending the survey.
-</p>
+<div class="field">
+  <label for="">
+    In this section we ask questions about the specific group to which you will be sending the survey.
+  </label>
+  Field
+</div>
 
-<p>
-  What would you like to call your survey?
-</p>
+<div class="field">
+  <label for="">
+    What would you like to call your survey?
+  </label>
+  Field
+</div>
 
-<p>
-  If this is a follow up to a previous GO-FOX survey, please enter the original survey ID:
-</p>
+<div class="field">
+  <label for="">
+    If this is a follow up to a previous GO-FOX survey, please enter the original survey ID:
+  </label>
+  Field
+</div>
 
-<p>
-  What is the language of your survey?
-</p>
+<div class="field">
+  <label for="">
+    What is the language of your survey?
+  </label>
+  Field
+</div>
 
-<p>
-  Please upload a logo for your survey:
-</p>
+<div class="field">
+  <label for="">
+    Please upload a logo for your survey:
+  </label>
+  Field
+</div>
 
-<p>
-  What is the name of the group/organisation to which the survey participants belong?
-</p>
+<div class="field">
+  <label for="">
+    What is the name of the group/organisation to which the survey participants belong?
+  </label>
+  Field
+</div>
 
-<p>
-  Which of the following best describes the group/organisation to which the survey participants belong?
-</p>
+<div class="field">
+  <label for="">
+    Which of the following best describes the group/organisation to which the survey participants belong?
+  </label>
+  Field
+</div>
 
-<p>
-  Where is the group/organisation to which the survey participants belong located?
-</p>
+<div class="field">
+  <label for="">
+    Where is the group/organisation to which the survey participants belong located?
+  </label>
+  Field
+</div>
 
-<p>
-  Is the group/organisation to which survey participants belong part of a wider network or structure?
-</p>
+<div class="field">
+  <label for="">
+    Is the group/organisation to which survey participants belong part of a wider network or structure?
+  </label>
+  Field
+</div>
 
-<p>
-  Please give details:
-</p>
+<div class="field">
+  <label for="">
+    Please give details:
+  </label>
+  Field
+</div>
 
-<p>
-  To help us understand the group/organisation to which survey participants belong, please provide the URL for their website if there is one:
-</p>
+<div class="field">
+  <label for="">
+    To help us understand the group/organisation to which survey participants belong, please provide the URL for their website if there is one:
+  </label>
+  Field
+</div>
 
-<p>
-  TO BE UPDATED: What kind of conservation activities is the group/organisation to which survey participants belong involved in? Tick all that apply:
-</p>
+<div class="field">
+  <label for="">
+    TO BE UPDATED: What kind of conservation activities is the group/organisation to which survey participants belong involved in? Tick all that apply:
+  </label>
+  Field
+</div>
 
-<p>
-  When was the group/organisation to which participants belong first established?
-</p>
+<div class="field">
+  <label for="">
+    When was the group/organisation to which participants belong first established?
+  </label>
+  Field
+</div>
 
-<p>
-  For the group/organisation to which survey participants belong, please tick all the following sources of funding that apply:
-</p>
+<div class="field">
+  <label for="">
+    For the group/organisation to which survey participants belong, please tick all the following sources of funding that apply:
+  </label>
+  Field
+</div>
 
-<p>
-  Which of the following best describes the geographical scope of the group/organisation to which survey participants belong?
-</p>
+<div class="field">
+  <label for="">
+    Which of the following best describes the geographical scope of the group/organisation to which survey participants belong?
+  </label>
+  Field
+</div>
 
-<p>
-  How many people are there in the group/organisation in total?
-</p>
+<div class="field">
+  <label for="">
+    How many people are there in the group/organisation in total?
+  </label>
+  Field
+</div>
 
-<p>
-  How many people are there in the group/organisation who will be receiving the survey?
-</p>
+<div class="field">
+  <label for="">
+    How many people are there in the group/organisation who will be receiving the survey?
+  </label>
+  Field
+</div>
 
-<p>
-  If the survey is being targeted at a subgroup of the organisation, can you please describe the group?
-</p>
+<div class="field">
+  <label for="">
+    If the survey is being targeted at a subgroup of the organisation, can you please describe the group?
+  </label>
+  Field
+</div>
 
-<p>
-  If the survey is being targeted at a subgroup of the organisation, can you please explain why this group has been selected to participate?
-</p>
+<div class="field">
+  <label for="">
+    If the survey is being targeted at a subgroup of the organisation, can you please explain why this group has been selected to participate?
+  </label>
+  Field
+</div>
 
-<p>
-  Are you planning a session with your respondents to discuss the results?
-</p>
+<div class="field">
+  <label for="">
+    Are you planning a session with your respondents to discuss the results?
+  </label>
+  Field
+</div>
 
-<p>
-  If yes, what is the date of your session?
-</p>
+<div class="field">
+  <label for="">
+    If yes, what is the date of your session?
+  </label>
+  Field
+</div>
 
-<p>
-  Do you want respondents to your survey to be anonymous? If no, respondents' names will be visible in outputs intended to be shared with the group. Respondents will be made aware of this and reminded of their right to refuse to participate. You should think carefully about whether anonymity is appropriate, and may wish to consult your group in advance on their preferences around this.
-</p>
+<div class="field">
+  <label for="">
+    Do you want respondents to your survey to be anonymous? If no, respondents' names will be visible in outputs intended to be shared with the group. Respondents will be made aware of this and reminded of their right to refuse to participate. You should think carefully about whether anonymity is appropriate, and may wish to consult your group in advance on their preferences around this.
+  </label>
+  Field
+</div>
 
-<p>
-  If you wish to, you can view results broken into subgroups. To do so, please add subgroup names below so that they can be added to the survey. Respondents will be able to choose only one, so they should be mutually exclusive.
-</p>
+<div class="field">
+  <label for="">
+    If you wish to, you can view results broken into subgroups. To do so, please add subgroup names below so that they can be added to the survey. Respondents will be able to choose only one, so they should be mutually exclusive.
+  </label>
+  Field
+</div>
 
-<p>
-  What subgroup are you in?
-</p>
+<div class="field">
+  <label for="">
+    What subgroup are you in?
+  </label>
+  Field
+</div>
 
-<p>
-  Please enter subgroup answer options here
-</p>
+<div class="field">
+  <label for="">
+    Please enter subgroup answer options here
+  </label>
+  Field
+</div>
 
-<p>
-  What do you hope to achieve from using Go Fox with this group/organisation?
-</p>
+<div class="field">
+  <label for="">
+    What do you hope to achieve from using Go Fox with this group/organisation?
+  </label>
+  Field
+</div>
