--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -20,7 +20,7 @@
         </div>
       <% end %>
 
-      <% I18n.available_locales.each do |locale| %>
+      <!---<% I18n.available_locales.each do |locale| %>
         <h1><%= locale %></h1>
         <%= form.globalize_fields_for locale do |ff| %>
           <div class="field">
@@ -33,7 +33,17 @@
             <%= ff.text_area :description, id: :survey_description %>
           </div>
         <% end %>
-      <% end %>
+      <% end %>--->
+
+      <div class="field">
+        <%= form.label :name %>
+        <%= form.text_field :name, id: :survey_name %>
+      </div>
+
+      <div class="field">
+        <%= form.label :description %>
+        <%= form.text_area :description, id: :survey_description %>
+      </div>
 
       <% if current_user.admin? %>
         <%= render partial: 'organisational_fields' %>
