--- a/app/views/responses/results.html.erb
+++ b/app/views/responses/results.html.erb
@@ -46,6 +46,8 @@
   <div class="flex">
     <div class="flex-2-thirds">
       <div class="block--results">
+        <%= image_tag "sample-graph.png" %>
+        <p>(This is a sample graph)</p>
         <h2><%= t('results.title1') %></h2>
         <div><%= t('results.content1') %></div>
       </div>
