Altered the questions for new survey creation for the educational users

--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -1,125 +1,122 @@
+In this section we ask questions about the specific group or class to which you will be sending the survey.
+
 <div class="field">
   <label for="">
-    In this section we ask questions about the specific group or class to which you will be sending the survey.
+    Survey title
   </label>
-  Field
+  (Text box)
+  <p>
+    Lorem ipsum.
+  </p>
 </div>
 
 <div class="field">
   <label for="">
-    What would you like to call your survey?
+    Previous survey ID.
   </label>
-  Field
+  (Text box)
+  <p>
+    Lorem ipsum.
+  </p>
 </div>
 
 <div class="field">
   <label for="">
-    If this is a follow up to a previous GO-FOX survey, please enter the original survey ID:
+    Default language
   </label>
-  Field
+  (Radio buttons; English, French, Spanish)
+  <p>
+    Lorem ipsum.
+  </p>
 </div>
 
 <div class="field">
   <label for="">
-    What is the language of your survey?
+    Participants' organisation name
   </label>
-  Field
-</div>
-
-<div class="field">
-  <label for="">
-    Please upload a logo for your survey:
-  </label>
-  Field
-</div>
-
-<div class="field">
-  <label for="">
+  (Text field)
+  <p>
     What is the name of the group/organisation to which the survey participants belong?
-  </label>
-  Field
+  </p>
 </div>
 
 <div class="field">
   <label for="">
+    Participants' level of study
+  </label>
+  (Radio buttons)
+  <p>
     What is the level of study of your survey group or class?
-  </label>
-  Field
+  </p>
 </div>
 
 <div class="field">
   <label for="">
-    Which of the following best describes the disciplinary specialism of this specific group or class?
+    Participants' specialism
   </label>
-  Field
+  (Radio buttons)
+  <p>
+    Lorem ipsum.
+  </p>
 </div>
 
 <div class="field">
   <label for="">
-    What is the name of the module/course within which you are using this tool? Please provide as much detail as possible.
+    Name of Course/module:
   </label>
-  Field
+  (Text field).
+  <p>
+    Lorem ipsum
+  </p>
 </div>
 
 <div class="field">
   <label for="">
-    To help us understand your course, please provide the URL for your course website if there is one:
+    Course website/url
   </label>
-  Field
+  (Text field).
+  <p>
+    Lorem ipsum
+  </p>
 </div>
 
 <div class="field">
   <label for="">
-    How many people are there in the group/class who will be receiving the survey?
+    Size of group
   </label>
-  Field
+  (Text field and don't know option)
+  <p>
+    Lorem ipsum
+  </p>
 </div>
 
 <div class="field">
   <label for="">
-    Are you planning a session with your respondents to discuss the results?
+    Follow up session?
   </label>
-  Field
+  (Radio buttons: yes/no)
+  <p>
+    Lorem ipsum
+  </p>
 </div>
 
 <div class="field">
   <label for="">
-    If yes, what is the date of your session?
+    Session date
   </label>
-  Field
+  (Date selection)
 </div>
 
 <div class="field">
   <label for="">
-    Do you want respondents to your survey to be anonymous? If no, respondents' names will be visible in outputs intended to be shared with the group. Respondents will be made aware of this and reminded of their right to refuse to participate. You should think carefully about whether anonymity is appropriate, and may wish to consult your group in advance on their preferences around this.
+    Anonymity.
   </label>
-  Field
-</div>
-
-<div class="field">
-  <label for="">
-    If you wish to, you can view results broken into subgroups. To do so, please add subgroup names below so that they can be added to the survey. Respondents will be able to choose only one, so they should be mutually exclusive.
-  </label>
-  Field
-</div>
-
-<div class="field">
-  <label for="">
-    What subgroup are you in?
-  </label>
-  Field
-</div>
-
-<div class="field">
-  <label for="">
-    Please enter subgroup answer options here:
-  </label>
-  Field
+  (Radio buttons: yes/no)
 </div>
 
 <div class="field">
   <label for="">
     What do you hope to achieve from using GO-FOX with this class?
   </label>
-  Field
+  (Free text)
 </div>
