--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -4,7 +4,7 @@ In this section we ask questions about the specific group or class to which you 
   <label for="">
     Survey title
   </label>
-  (Text box)
+  <%= form.text_field :name, id: :survey_name %>
   <p>
     Lorem ipsum.
   </p>
@@ -14,7 +14,7 @@ In this section we ask questions about the specific group or class to which you 
   <label for="">
     Previous survey ID.
   </label>
-  (Text box)
+  <%= form.text_field :survey_previous_id, id: :survey_previous_id %>
   <p>
     Lorem ipsum.
   </p>
@@ -34,7 +34,7 @@ In this section we ask questions about the specific group or class to which you 
   <label for="">
     Participants' organisation name
   </label>
-  (Text field)
+  <%= form.text_field :participant_org_name, id: :participant_org_name %>
   <p>
     What is the name of the group/organisation to which the survey participants belong?
   </p>
@@ -64,7 +64,7 @@ In this section we ask questions about the specific group or class to which you 
   <label for="">
     Name of Course/module:
   </label>
-  (Text field).
+  <%= form.text_field :participant_org_name, id: :participant_org_name %>
   <p>
     Lorem ipsum
   </p>
@@ -74,7 +74,7 @@ In this section we ask questions about the specific group or class to which you 
   <label for="">
     Course website/url
   </label>
-  (Text field).
+  <%= form.text_field :course_url, id: :course_url %>
   <p>
     Lorem ipsum
   </p>
@@ -118,5 +118,5 @@ In this section we ask questions about the specific group or class to which you 
   <label for="">
     What do you hope to achieve from using GO-FOX with this class?
   </label>
-  (Free text)
+  <%= form.text_area :hope_to_achieve, id: :hope_to_achieve %>
 </div>
