Add date selection for educational user on new survey form

--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -105,6 +105,7 @@ In this section we ask questions about the specific group or class to which you 
     Session date
   </label>
   (Date selection)
+  <%= form.date_select :date, start_year: Date.current.year %>
 </div>
 
 <div class="field">
