Add size of group as a text box on educational user survey creation form

--- a/app/views/surveys/_educational_fields.html.erb
+++ b/app/views/surveys/_educational_fields.html.erb
@@ -74,7 +74,7 @@
     <label for="">
       Size of group
     </label>
-    (Text field and don't know option)
+    <%= form.text_field '[settings][size_of_group]' %>
     <p>
       Lorem ipsum
     </p>
