Comment out reference to demographic question

--- a/app/views/surveys/_customised_question_fields.html.erb
+++ b/app/views/surveys/_customised_question_fields.html.erb
@@ -2,8 +2,8 @@
   <!---
   <div class="field">
     <p>
-      <%= f.label :demographic_question_id %>
-      <%= f.collection_select :demographic_question_id, @customisable_questions, :id, :text %>
+      <% #= f.label :demographic_question_id %>
+      <% #= f.collection_select :demographic_question_id, @customisable_questions, :id, :text %>
     </p>
   </div>
   -->
