--- a/app/views/surveys/_customised_question_fields.html.erb
+++ b/app/views/surveys/_customised_question_fields.html.erb
@@ -14,13 +14,12 @@
     </p>
   </div>
 
+  <%= link_to_remove_association "Remove Custom Question", f, {class: "button"} %>
+  <%= link_to_add_association 'Add Option', f, :options, {'data-association-insertion-method' => 'append'} %>
+
   <div class="field">
     <%= f.fields_for :options do |options_form| %>
       <%= render partial: 'surveys/option_fields', locals: {f: options_form} %>
     <% end %>
   </div>
-
-  <%= link_to_add_association 'Add Option', f, :options %>
-
-  <%= link_to_remove_association "Remove Custom Question", f, {class: "button"} %>
 </div>
